--- a/hotels.html
+++ b/hotels.html
@@ -227,10 +227,12 @@
         <a class="social-btn social-btn-youtube" href="http://www.youtube.com">Youtube</a><!-- иконка ютуба png-->
       </section>
       <section class="link-third">
-        <span class="html-ac">website by </span>
-        <a class="html-ac" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img class="html-im" src="img/html-academy-1.png" alt="HTMLacademy">
-        </a>
+        <div class="html-academy">
+          <span class="html-ac">website by </span>
+          <a class="html-ac-pic" href="https://htmlacademy.ru/intensive/htmlcss">
+          <!-- <img class="html-im" src="img/html-academy-1.png" alt="HTMLacademy"> -->
+          </a>
+        </div>
       </section>
     </div>
   </footer>
