--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
           </div>
 
           <div class="kids">
-            <div class="booking-form-label">
-              <label class="name-date-2">Дети:</label>
-            </div>
+            <label class="name-date-2">
+              Дети:
+            </label>
             <div class="small">
-              <label>
+
                 <a class="minus" href="#">
                   <!-- <img src="img/minus.png" alt="minus"> -->
                 </a>
@@ -173,9 +173,11 @@
                 <a class="plus" href="#">
                   <!-- <img src="img/plus.png" alt="plus"> -->
                 </a>
-              </label>
+
             </div>
           </div>
+
+
 
           <input class="btn-form" type="button" value="Найти" />
         </form>
@@ -199,10 +201,12 @@
         <a class="social-btn social-btn-youtube" href="http://www.youtube.com">Youtube</a><!-- иконка ютуба png-->
       </section>
       <section class="link-third">
-        <span class="html-ac">website by </span>
-        <a class="html-ac" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img class="html-im" src="img/html-academy-1.png" alt="HTMLacademy">
-        </a>
+          <div class="html-academy">
+          <span class="html-ac">website by </span>
+          <a class="html-ac-pic" href="https://htmlacademy.ru/intensive/htmlcss">
+          <!-- <img class="html-im" src="img/html-academy-1.png" alt="HTMLacademy"> -->
+          </a>
+        </div>
       </section>
     </div>
   </footer>
