--- a/hotels.html
+++ b/hotels.html
@@ -44,7 +44,7 @@
                 </label>
               </div>
 
-              <div class="filter-houses"><!--==========******БЛОК - ТИПЫ ЖИЛЬЯ******==========-->
+              <div class="filter-houses"><!--==========******БЛОК - ТИПЫ ЖИЛЬЯ*********==========-->
                 <h3 class="filter-houses-title">Тип жилья:</h3>
                 <input id="cfourth" type="checkbox" name="fourth" checked hidden />
                 <label class="filter-select" for="cfourth">
