--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       </div>
     </section><!--==========******КОНЕЦ БЛОКА - ПОИСКА И БРОНИ ГОСТИНИЦЫ******==========-->
 
-    <section class="map"><!--==========******БЛОК - ФРЕЙМ С КАРТОЙ******==========-->
+    <section class="map"><!--==========*********БЛОК - ФРЕЙМ С КАРТОЙ******==========-->
       <iframe class="container" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.180521662296!2d-111.83024383534357!3d34.85437335639766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNg!5e0!3m2!1sru!2s!4v1493279104759" allowfullscreen>
       </iframe>
     </section>
