--- a/hotels.html
+++ b/hotels.html
@@ -147,7 +147,7 @@
       </div>
       <div class="found-houses-all clearfix">
         <div class="found-houses-info">
-          <a class="found-info-title properties-black-h3" href="#">Desert Qual Inn</a>
+          <a class="found-info-title properties-black-h3" href="#">Desert Quail Inn</a>
         </div>
         <div class="found-about clearfix">
           <div class="found-houses-type">
